# athena-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  README.rst  docker-compose-dev.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.circleci/: config.yml
Athena_backend/: settings.py  urls.py  wsgi.py
athena/: celery.py  settings.py  urls.py  wsgi.py
athena/authentication/: __init__.py  backend.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
athena/core/: __init__.py  models.py  storage.py
athena/edu/: __init__.py  models.py  serializers.py  urls.py  views.py
athena/works/: __init__.py  filters.py  models.py  serializers.py  urls.py  views.py
authentication/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_student_teacher_tutor.py  0003_auto_20190209_1340.py
config/nginx/: athena.conf
edu/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
edu/migrations/: 0001_initial.py  0002_remove_studentgroup_subject_id.py  0003_auto_20190209_0156.py  0004_auto_20190209_1117.py  0005_subject_semester.py  0006_auto_20190209_1416.py
postman/: Athena.postman_collection.json
postman_tests/: Athena.postman_collection.json  Athena.postman_environment.json  run-api-tests.sh
works/: __init__.py  apps.py  models.py  serializers.py  storage.py  urls.py  views.py
works/migrations/: 0001_initial.py  0002_auto_20190209_0156.py  0003_auto_20190209_1126.py  0004_auto_20190209_1304.py  (+1 more)
(+29 files in other folders)
