[tool.poetry]
name = "athena"
version = "0.1.0"
description = "Backend part of athena system"
authors = ["RTU MIREA IPPO Laboratory"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
gunicorn = "^19.9"
django = "^2.2"
django-dotenv = "^1.4"
django-filter = "^2.1"
django-extensions = "^2.1"
django-cors-headers = "^2.4"
djangorestframework = "^3.9"
djangorestframework_simplejwt = "^3.3"
djangorestframework-camel-case = "^1.0"
django-request-logging = "0.6.7"
drf-yasg = "^1.13"
psycopg2-binary = "^2.7"
djangorestframework-stubs = "^0.4.2"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
isort = "^4.3"
pytest = "^4.3"
pytest-django = "^3.4"
pytest-cov = "^2.6"
pylint = "^2.3"
mypy = "^0.700.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
